<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    android:paddingEnd="@dimen/large_gap"
    android:paddingStart="@dimen/large_gap"
    tools:context=".newMovierFragment">

    <TextView
        android:id="@+id/new_movie_text"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/new_movie_label"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/new_movie_text"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_height="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/cardLayout"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/name_label_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/medium_gap"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/name_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/category_card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/name_card"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_height="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/cardLayout"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/category_label_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/medium_gap"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/category_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/desc_card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/category_card"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_height="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/cardLayout"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/desc_label_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/medium_gap"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/description_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/calification_card"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/desc_card"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_height="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/cardLayout"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/calification_label_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="@dimen/medium_gap"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/calification_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/submit_action"
        android:layout_marginTop="@dimen/medium_gap"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintTop_toBottomOf="@id/calification_card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>